<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#666666" >
    
    <Button
    	android:id="@+id/set_beaconButton"
    	android:layout_marginTop="70dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:onClick="setBeacon"
        android:background="@drawable/set_button"
        android:text="@string/set_beacon" />
    
    <TextView
        android:id="@+id/timestampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/beacon_set_warning"
        android:textSize="14sp"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        android:textColor="#ffffff" />
    
    <Button
    	android:id="@+id/find_beaconButton"
    	android:layout_marginTop="10dp"
    	android:color="#9F2200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="findBeacon"
        android:enabled="false"
        android:text="@string/find_beacon"
        android:textColor="#ffffff" />
    
</LinearLayout>

